# Stage12_remote_run

./: .gitignore  POD_PLAN.md  inference.py  pyproject.toml  run_point_cloud.py  stage12_single_relight.py  stage12_stream_worker.py  stage12_stream_worker_fast.py
background/: scene_000001_background_meta.json
depth_pcd/: scene_000001_camera.json
mvinverse/models/: mvinverse.py
mvinverse/models/layers/: dpt_head.py  head_act.py  transformer_head.py
mvinverse/utils/: basic.py  color.py
output/demo_scene/: background_meta.json  camera.json  manifest.json  optimization_log.json  optimize_config.json  scene_mitsuba.json
output/demo_scene/light/: initial_light.json  optimized_light.json  optimized_point_lights.json  target_light.json
scripts/: download_shards.sh  pack_results.sh  run_worker.sh  run_worker_fast.sh  setup_runpod.sh
stage1/: main.py
stage2/: main.py
